--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
+    "expose-loader": "^0.7.4",
     "imports-loader": "^0.7.1",
     "jquery": "^3.3.1",
     "node-sass": "^4.7.2",
