--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
     "expose-loader": "^0.7.4",
+    "fishbone": "^1.0.1",
     "imports-loader": "^0.7.1",
     "jquery": "^3.3.1",
     "node-sass": "^4.7.2",
@@ -51,6 +52,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "pug": "^2.0.0-rc.4",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
